feat: more docs, proper update subreddits and get all
